--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	<body>
 		<input type="text" id="input">
-		<div id="div"></p>
+		<div id="div"></div>
 		<script src="script.js"></script>
 	</body>
 </html>
