--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Command</title>
+		<title>Commandline</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
